# DailyLog

./: .gitignore  Procfile  pyproject.toml
.agents/rules/: use-poetry-run.md
.agents/skills/django-testing/: SKILL.md
account/: tests.py  urls.py  views.py
config/: settings.py  urls.py
core/: models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_task.py  0003_step_worksession.py
core/static/css/: globals.css  tailwind.dist.css
core/static/js/: nprogress.js
core/templates/: base.html  layout.html
core/templates/core/: day.html  index.html  layout.html  login.html  signup.html
core/templates/partials/: create_task_form.html  creating_day_form.html  day_get.html  day_list.html  day_list_skeleton.html  login_form.html  signup_form.html  task_item.html  task_list.html
templates/: base.html  layout.html
templates/account/: login.html  signup.html
templates/core/: day.html  history.html  index.html  new.html
templates/cotton/: brand.html  dayHeader.html  dayItem.html  day_get.html  day_list.html  errMsg.html  fieldset.html  login_form.html  modalForm.html  passField.html  pomoTimer.html  profile_header.html  sidebar.html  signup_form.html  step_list.html  task_item.html  task_list.html
templates/partials/: create_break_step_form.html  create_task_form.html  create_work_step_form.html  creating_day_form.html  day_detail_skeleton.html  day_get.html  day_list.html  day_list_skeleton.html  editing_day_form.html  login_form.html  profile_header.html  settings_password_form.html  settings_profile_form.html  signup_form.html  step_list.html  task_item.html  task_list.html  task_list_skeleton.html
theme/static_src/: package-lock.json
theme/static_src/src/: styles.css
