[project]
name = "dailylog"
version = "0.1.0"
description = ""
authors = [
    {name = "thomas011001",email = "thomasyacoub321@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]
