[project]
name = "dailylog"
version = "0.1.0"
description = ""
authors = [
    {name = "thomas011001",email = "thomasyacoub321@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "django-tailwind[cookiecutter,honcho,reload] (>=4.4.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipython (>=9.12.0,<10.0.0)"
]
